--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <canvas></canvas>
+    <script src="./js/Classes/Player.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
