feat: create players moviment

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <canvas></canvas>
     <script src="./js/Classes/Player.js"></script>
+    <script src="./js/eventListeners.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
