feat: background sprite

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <canvas></canvas>
+    <script src="./js/Classes/Sprite.js"></script>
     <script src="./js/Classes/Player.js"></script>
     <script src="./js/eventListeners.js"></script>
     <script src="./script.js"></script>
