--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <canvas></canvas>
+    <script src="./js/utils.js"></script>
+    <script src="./js/data/collisions.js"></script>
+    <script src="./js/Classes/CollisionBlock.js"></script>
     <script src="./js/Classes/Sprite.js"></script>
     <script src="./js/Classes/Player.js"></script>
     <script src="./js/eventListeners.js"></script>
