feat: change levels

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-room Platformer Game Tutorial with JavaScript and HTML Canvas</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Multi-room Platformer Game Tutorial with JavaScript and HTML Canvas
+    </title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <canvas></canvas>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
+      integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./js/utils.js"></script>
     <script src="./js/data/collisions.js"></script>
     <script src="./js/Classes/CollisionBlock.js"></script>
@@ -14,5 +22,5 @@
     <script src="./js/Classes/Player.js"></script>
     <script src="./js/eventListeners.js"></script>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
